fixed twitter on mobile

--- a/client/views/site/twitter/twitter.less
+++ b/client/views/site/twitter/twitter.less
@@ -10,7 +10,7 @@
 	.carousel {
 		.item {
 			color: white;
-			padding: 7%;
+			padding: 70px 0;
 		}
 	}
 }
